[project]
name = "brk-api-experiment"
version = "0.1.0"
description = "Experiment with the BRK (Kadaster) API"
requires-python = ">=3.12"
dependencies = [
    "asgi-correlation-id>=4.3.4",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "loguru>=0.7.3",
    "opentelemetry-api>=1.40.0",
    "opentelemetry-exporter-otlp>=1.40.0",
    "opentelemetry-instrumentation-fastapi>=0.61b0",
    "opentelemetry-instrumentation-httpx>=0.61b0",
    "opentelemetry-instrumentation-logging>=0.61b0",
    "opentelemetry-sdk>=1.40.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.8.0",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.400",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.15.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/brk_api_experiment"]

[tool.pyright]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"

[tool.ruff]
target-version = "py313"
line-length = 120
respect-gitignore = false # TODO(tomdewildt): remove later

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "N"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
